syntax = "proto3";

service Auth {
    rpc Auth (AuthRequest) returns (AuthResponse);
}

message AuthRequest {
    string code = 1;
}

message AuthResponse {
    enum Status {
        UNKNOWN = 0;
        INVALID_PARAM = -1;
        SUCCESS = 1;
        INVALID_CODE = 2;
        FROZEN_USER = 3;
    }
    Status status = 1;
    string token = 2;
    string studentID = 3;
    string studentName = 4;
}